--- a/styles.css
+++ b/styles.css
@@ -849,7 +849,7 @@ input#image-qr {
     }
 
     .links {
-        flex-direction: column; /* Stack links vertically */
+        flex-direction: row;
         gap: 20px; /* Reduce gap between links */
     }
 
